deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: edu5-simple
  name: mynginx
  namespace: edu5
spec:
  replicas: 2
  selector:
    matchLabels:
      run: mynginx
  template:
    metadata:
      labels:
        run: mynginx
    spec:
      containers:
      - image: ghcr.io/shclub/nginx
        name: mynginx
        ports:
        - containerPort: 80
