route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: edu5-simple
  name: nginx-route-edu18
spec:
  host: nginx
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: mynginx
    weight: 100
  wildcardPolicy: None
